CMakePM: Do not have special treatment for PATH in CMake Presets

Fixes: QTCREATORBUG-31439
Change-Id: I23b6616adc8fd6bfddd0bbd536d6a15b23fa0996
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>